Bug: Armadillo theme css updated to correct wrapping issue

--- a/application/views/inventory/armadillo/dealertrend-inventory-api.css
+++ b/application/views/inventory/armadillo/dealertrend-inventory-api.css
@@ -157,8 +157,8 @@
 
 #armadillo-listing-items > h2 { display:block; line-height:20px; padding:10px; }
 
-.armadillo-column-left { width:200px; float:left; }
-.armadillo-column-right { float:left; width:530px; overflow:hidden; }
+.armadillo-column-left { width: 28%; float:left; }
+.armadillo-column-right { float:left; width: 70%; overflow:hidden; }
 
 .armadillo-item { background:white; clear:both; position:relative; color:#666; position:relative; padding-bottom:5px; border-bottom:1px solid #a8a8a8; }
 .armadillo-item .armadillo-column-left { padding-left:10px; margin-top:15px;}
@@ -240,9 +240,24 @@
 #armadillo-detail .armadillo-main-line h2 { color:black; font-size:20px; line-height:22px; }
 #armadillo-detail .armadillo-main-line p { clear:both; margin:0; padding:0; color:#9f0300; font-size:14px; font-weight:bold; margin-top:5px; }
 #armadillo-detail .armadillo-header { background:#858585; color:white; font-size:18px; text-transform:uppercase; height:30px; line-height:30px; text-indent:5px; }
-#armadillo-detail .armadillo-column-left,
-#armadillo-detail .armadillo-column-middle,
-#armadillo-detail .armadillo-column-right { float:left; width:308.2px !important; }
+#armadillo-detail .armadillo-column-right{
+	float:left;
+	width:33%;
+	max-width: 302px;
+	padding: 0 0 0 2%;
+}
+#armadillo-detail .armadillo-column-middle{
+	float:left;
+	width:31%;
+	max-width: 288px;
+	padding: 0 0 0 2%;
+}
+#armadillo-detail .armadillo-column-left {
+	float:left;
+	width:31%;
+	max-width: 288px;
+	padding: 0 0 0 1%;
+}
 
 #armadillo-detail .armadillo-icons { float:left; width:280px; text-align:left; padding:10px; }
 
